Login prompt cannot set empty username
Try to access an HTTP page where the username is the empty string (such as the VLC HTTP interface). VLC will request the username and password. Type the password in and select OK.
Expected result: VLC sends the authentication token.
Actual result: VLC does not send any authentication token.