keystore: accept empty username

The http protocol accepts empty username. Other protocols may not accept it.
This will result on a fail of the login function, leaving the possibility to
try a new login.

Fixes #25074

(cherry picked from commit 384526b41285662944625bdd0b61c03868358279)
Signed-off-by: Thomas Guillem <thomas@gllm.fr>